bug fix, loading animation not showing sometimes

--- a/src/components/LoadingAnimation/LoadingAnimation.scss
+++ b/src/components/LoadingAnimation/LoadingAnimation.scss
@@ -1,5 +1,5 @@
 .lds-ellipsis-center {
-  position: fixed;
+  position: fixed !important;
   top: 50vh;
   left: 50vw;
   transform: translate(-50%, -50%);
